fix security configuaration